sandbox/output
ProfitJava6.java:10: error: type Supplier does not take parameters
            new Supplier<Double>() {
                        ^
ProfitJava6.java:18: error: type Supplier does not take parameters
            new Supplier<Double>() {
                        ^
ProfitJava6.java:26: error: cannot find symbol
            LoggerFunctions.info(logger),
            ^
  symbol:   variable LoggerFunctions
  location: class ProfitJava6
ProfitJava6.java:27: error: type Supplier does not take parameters
            new Supplier<Double>() {
                        ^
ProfitJava6.java:34: error: incompatible types: unexpected return value
    return profit;
           ^
ProfitTest.java:33: error: 'void' type not allowed here
        assertEquals(18845.9, ProfitJava6.calculate(), 0.001);
                                                   ^
6 errors
